# django_genetics

./: .gitignore  LICENSE  MANIFEST.in  README.rst  manage.py  setup.cfg
django_genetics/: asgi.py  settings.py  urls.py  wsgi.py
genetics/: __init__.py  api.py  apps.py  forms.py  models.py  urls.py  utils.py
genetics/data/hgnc/: HGNC Gene.csv
genetics/data/omim/: mimTitles.csv  morbidmap.csv
genetics/management/commands/: import_gene.py
genetics/migrations/: 0001_initial.py
genetics/static/css/: genetics.css
genetics/static/js/: genetics.js
genetics/templates/genetics/widgets/: attrs.html  gene.html  sequence_variant.html  sequence_variant_from_gene.html
test_genetics/: apps.py
